--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "dotenv -e .env.dev -- nodemon --exec ts-node src/server.ts",
-    "start": "dotenv -e .env.live -- node dist/server.js",
+    "server:prod": "dotenv -e .env.live -- node dist/src/server.js",
+    "start": "npm-run-all clean build server:prod",
     "test": "dotenv -e .env.test -- jest --detectOpenHandles --passWithNoTests --coverage",
     "build": "tsc",
     "clean": "rimraf dist",
@@ -36,6 +37,7 @@
     "eslint": "^9.31.0",
     "jest": "^30.0.5",
     "nodemon": "^3.1.10",
+    "npm-run-all": "^4.1.5",
     "supertest": "^7.1.4",
     "ts-jest": "^29.4.0",
     "ts-node-dev": "^2.0.0",
